--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 
   <header>
-    <img src="oakmont-logo.png" alt="Oakmont Logo" class="logo">
+    <img src="oakmont-logo.png.png" alt="Oakmont Logo" class="logo">
     <div>
       <h1 class="intro">Welcome to Oakmont Consulting</h1>
       <p class="subtext">Not your typical recruitment site...</p>
