--- a/index.html
+++ b/index.html
@@ -1,171 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Oakmont Consulting</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1f1f1f;
-      color: #ffffff;
-      line-height: 1.6;
+      font-family: Arial, sans-serif;
+      background-color: #1c1c1c;
+      color: white;
     }
 
     header {
       display: flex;
       align-items: center;
-      padding: 40px 60px;
+      padding: 30px;
     }
 
     .logo {
       width: 180px;
-      margin-right: 40px;
+      margin-right: 20px;
     }
 
-    .intro {
+    .intro-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .intro-text h1 {
       margin: 0;
-      font-size: 2.2em;
-      color: #88cc44;
+      font-size: 2.5em;
+      color: #b6ff00;
     }
 
-    .subtext {
+    .intro-text p {
       font-size: 1.2em;
       color: #cccccc;
-      margin-top: 10px;
-    }
-
-    main {
-      padding: 20px 60px;
     }
 
     .section {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .section h2 {
+      color: #b6ff00;
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    .section p {
+      max-width: 800px;
+      margin: 0 auto 30px;
+      font-size: 1.1em;
+      color: #e0e0e0;
+    }
+
+    .specialisms {
       display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
       flex-wrap: wrap;
-      margin: 60px 0;
-      animation: fadeIn 1.2s ease-in-out;
-    }
-
-    .section:nth-child(even) {
-      flex-direction: row-reverse;
-    }
-
-    .section-text {
-      flex: 1;
+      justify-content: center;
       padding: 20px;
-      max-width: 50%;
     }
 
-    .section-title {
-      flex: 1;
+    .specialism {
+      flex: 1 1 300px;
+      margin: 20px;
+      background-color: #2b2b2b;
       padding: 20px;
-      max-width: 40%;
-      color: #88cc44;
-      font-size: 1.8em;
+      border-radius: 8px;
+      text-align: left;
+    }
+
+    .specialism h3 {
+      color: #b6ff00;
     }
 
     .contact {
-      background-color: #2c2c2c;
-      padding: 40px 60px;
+      padding: 40px 20px;
       text-align: center;
-      color: #aaa;
+      border-top: 1px solid #444;
     }
 
     .contact a {
-      color: #88cc44;
+      color: #b6ff00;
       text-decoration: none;
     }
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #555;
-      font-size: 0.9em;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media (max-width: 768px) {
-      .section {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .section-text, .section-title {
-        max-width: 100%;
-      }
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .logo {
-        margin-bottom: 20px;
-      }
+    .contact a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="oakmont-logo.png.png" alt="Oakmont Logo" class="logo">
-    <div>
-      <h1 class="intro">Welcome to Oakmont Consulting</h1>
-      <p class="subtext">Not your typical recruitment site...</p>
+    <img src="oakmont-logo.png.png" alt="Oakmont Logo" class="logo" />
+    <div class="intro-text">
+      <h1>Welcome to Oakmont Consulting</h1>
+      <p>Shiny new website coming soon...</p>
     </div>
   </header>
 
-  <main>
+  <section class="section">
+    <h2>For Clients</h2>
+    <p>Gain exclusive access to our carefully selected talent pool across AI, Data Science, and Engineering. We connect your company with only the top-tier specialists through a consultative, tailored recruitment experience.</p>
+  </section>
 
-    <div class="section">
-      <div class="section-title">AI & Machine Learning</div>
-      <div class="section-text">
-        We connect innovative minds in artificial intelligence with groundbreaking companies. Whether you’re building recommendation engines, NLP systems, or computer vision models – we’ll help you find the perfect fit.
+  <section class="section">
+    <h2>For Candidates</h2>
+    <p>We’re here to connect you to cutting-edge companies through our expert recruiters who specialise in your field. Whether you're looking for your next big opportunity or just exploring the market, we’ve got you covered.</p>
+  </section>
+
+  <section class="section">
+    <h2>Our Specialisms</h2>
+    <div class="specialisms">
+      <div class="specialism">
+        <h3>AI & Machine Learning</h3>
+        <p>We partner with companies on the cutting edge of AI, connecting them with brilliant minds pushing boundaries.</p>
+      </div>
+      <div class="specialism">
+        <h3>Data Science & Engineering</h3>
+        <p>From predictive modelling to big data infrastructure, we place the best talent in data-driven environments.</p>
+      </div>
+      <div class="specialism">
+        <h3>Hardware & Embedded Systems</h3>
+        <p>We know the intricate world of hardware and embedded tech and have the network to place top engineers fast.</p>
       </div>
     </div>
+  </section>
 
-    <div class="section">
-      <div class="section-title">Data Science & Engineering</div>
-      <div class="section-text">
-        From data pipelines to deep analytics, we partner with companies that value the power of insight. Let our specialist recruiters connect you with roles that make data matter.
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">Hardware & Embedded Systems</div>
-      <div class="section-text">
-        We work with pioneers in physical tech – IoT, microcontrollers, firmware development, and hardware design. Find a company where your technical precision will shape the future.
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">For Candidates</div>
-      <div class="section-text">
-        Gain direct access to leading companies through our expert recruiters. Oakmont is more than a recruiter – it’s a platform built to amplify your career. Join a network that values your expertise and ambition. Get career coaching, CV support, and insider connections.
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">For Clients</div>
-      <div class="section-text">
-        Tap into a carefully curated pool of specialists in AI, Data, and Hardware. Our team doesn’t just source talent – we understand what makes top candidates thrive in your business. You’ll hire better, faster. Let us help you build lasting teams.
-      </div>
-    </div>
-
-  </main>
-
-  <div class="contact">
-    <p><strong>Email:</strong> <a href="mailto:info@oakmontconsulting.co.uk">info@oakmontconsulting.co.uk</a></p>
-    <p><strong>Phone:</strong> <a href="tel:+442034355598">+44 (0) 203 435 5598</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/company/11016342/admin/page-posts/published/" target="_blank">View our jobs & connect with recruiters</a></p>
-  </div>
-
-  <footer>
-    &copy; 2025 Oakmont Consulting. All rights reserved.
-  </footer>
+  <section class="contact">
+    <p>Email: <a href="mailto:info@oakmontconsulting.co.uk">info@oakmontconsulting.co.uk</a></p>
+    <p>Phone: <a href="tel:+442034355598">+44 (0) 203 435 5598</a></p>
+    <p>Visit our <a href="https://www.linkedin.com/company/11016342/admin/page-posts/published/" target="_blank">LinkedIn page</a> to view jobs and connect with our recruiters while we build the new platform.</p>
+  </section>
 
 </body>
 </html>
